--- a/templates/index.html
+++ b/templates/index.html
@@ -321,21 +321,21 @@
 
                 }
                 .success {
-                  color: black;
+                  color: white;
                   height: fit-content;
-                  width:fit-content;
-                  background-color:white;
-                  padding: 27px;
+                  width: 100%;
+                  background-color:inherit;
+                  padding: 17px;
                   border-radius: 30px;
                   box-shadow: inset 6px 6px 6px #111, inset -6px -6px 6px black;
                 }
                 
                 .info{
-                  color: black;
+                  color: white;
                   height: fit-content;
-                  width:fit-content;
-                  background-color:white;
-                  padding: 27px;
+                  width: 100%;
+                  background-color:inherit;
+                  padding: 17px;
                   border-radius: 50px;
                   box-shadow: inset 6px 6px 6px #111, inset -6px -6px 6px black;
                 }
@@ -360,11 +360,17 @@
                 .bio{
                   margin: 30px;
                   padding: 40px;
+                  box-shadow: inset 6px 6px 6px #111, inset -6px -6px 6px black;
+                  border-radius: 30px;
+
                   
                 }
                 .connect{
                   margin: 30px;
                   padding: 40px;
+                  box-shadow: inset 6px 6px 6px #111, inset -6px -6px 6px black;
+                  border-radius: 30px;
+
                 }
                 ul{
                   list-style: none;
